--- a/main.css
+++ b/main.css
@@ -17,4 +17,48 @@ img{
 .p1 >p{
     display:flex
 }
- 
+
+
+
+
+#intro {
+    display: flex;
+    justify-content: center;
+    padding: 60px 0;
+  }
+  #intro-inner {
+    width: 100%;
+  }
+  #intro-inner h3 {
+    font-size: 1.75rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    text-align: center;
+  }
+  #intro-inner h4 {
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-weight: 600;
+    text-align: center;
+  }
+  .intro-content {
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    margin: auto;
+  }
+  .intro-content .intro-item {
+    width: 30%;
+    padding: 10px;
+    border: 1px solid #e1e0e0;
+  }
+  .intro-content .intro-item img {
+    width: 100%;
+  }
+  .intro-content .intro-item p {
+    text-align: justify;
+    margin-top: 20px;
+    line-height: 1.5;
+  }
